--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
 			<div class="container">
 				<a class="logo" href="https://www.google.com">
 					<picture>
-						<source srcset="img/Logo@1x.png, img/Logo@2x.png 2x" media="(min-width: 38em)">
-						<img srcset="img/Logo@1x.png, img/Logo@2x.png 2x" alt="Main logo">
+						<source srcset="img/Logo@2x.png" media="(min-width: 38em)">
+						<source srcset="img/Logo@1x.png">
+						<img srcset="img/Logo@1x.png" alt="Main logo">
 					</picture>
 				</a>
-				<nav id="menu" class="menu" role="navigation">
+				<nav id="menu" class="menu">
 					<div class="mobile-nav">
 						<span></span>
 						<span></span>
@@ -32,9 +33,9 @@
 							<div class="plus">+</div>
 							<a href="https://www.google.com">Home</a>
 							<ul class="sub-menu">
-								<li><a href="#">Home</a></li>
-								<li><a href="#">About us</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="https://www.google.com">Home</a></li>
+								<li><a href="https://www.google.com">About us</a></li>
+								<li><a href="https://www.google.com">Contact</a></li>
 							</ul>
 						</li>
 						<li>
@@ -54,10 +55,8 @@
 			<div class="content">
 				<h1 class="title-big">We can <span>help</span>.</h1>
 				<p>Teaching independence to the lives of the people you love with reliable, individualized emotional and behavioral therapy.</p>
-				<a href="https://www.google.com">
-					<button>
-						<span>Find help here</span>
-					</button>
+				<a href="https://www.google.com" class="button">
+					<span>Find help here</span>
 				</a>
 			</div>
 		</div>
@@ -67,28 +66,34 @@
 		<div class="container">
 			<div class="content">
 				<picture>
-					<source srcset="img/partner-logo/Magellan-122@1x.png, img/partner-logo/Magellan-122@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/Magellan-122@1x.png, img/partner-logo/Magellan-122@2x.png 2x" alt="Magellan logo">
+					<source srcset="img/partner-logo/Magellan-122@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/Magellan-122@1x.png">
+					<img srcset="img/partner-logo/Magellan-122@1x.png" alt="Magellan logo">
 				</picture>
 				<picture>
-					<source srcset="img/partner-logo/Kaiser-Permanente-143@1x.png, img/partner-logo/Kaiser-Permanente-143@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/Kaiser-Permanente-143@1x.png, img/partner-logo/Kaiser-Permanente-143@2x.png 2x" alt="Kaiser-Permanente logo">
+					<source srcset="img/partner-logo/Kaiser-Permanente-143@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/Kaiser-Permanente-143@1x.png">
+					<img srcset="img/partner-logo/Kaiser-Permanente-143@1x.png" alt="Kaiser-Permanente logo">
 				</picture>
 				<picture>
-					<source srcset="img/partner-logo/Anthem-158@1x.png, img/partner-logo/Anthem-158@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/Anthem-158@1x.png, img/partner-logo/Anthem-158@2x.png 2x" alt="Anthem logo">
+					<source srcset="img/partner-logo/Anthem-158@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/Anthem-158@1x.png">
+					<img srcset="img/partner-logo/Anthem-158@1x.png" alt="Anthem logo">
 				</picture>
 				<picture>
-					<source srcset="img/partner-logo/North-Bay-Regional-Center-189@1x.png, img/partner-logo/North-Bay-Regional-Center-189@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/North-Bay-Regional-Center-189@1x.png, img/partner-logo/North-Bay-Regional-Center-189@2x.png 2x" alt="North-Bay-Regional-Center logo">
+					<source srcset="img/partner-logo/North-Bay-Regional-Center-189@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/North-Bay-Regional-Center-189@1x.png">
+					<img srcset="img/partner-logo/North-Bay-Regional-Center-189@1x.png" alt="North-Bay-Regional-Center logo">
 				</picture>
 				<picture>
-					<source srcset="img/partner-logo/Partnership-Health-Plan-of-CA-175@1x.png, img/partner-logo/Partnership-Health-Plan-of-CA-175@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/Partnership-Health-Plan-of-CA-175@1x.png, img/partner-logo/Partnership-Health-Plan-of-CA-175@2x.png 2x" alt="Partnership-Health-Plan-of-CA logo">
+					<source srcset="img/partner-logo/Partnership-Health-Plan-of-CA-175@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/Partnership-Health-Plan-of-CA-175@1x.png">
+					<img srcset="img/partner-logo/Partnership-Health-Plan-of-CA-175@1x.png" alt="Partnership-Health-Plan-of-CA logo">
 				</picture>
 				<picture>
-					<source srcset="img/partner-logo/Aetna-140@1x.png, img/partner-logo/Aetna-140@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/partner-logo/Aetna-140@1x.png, img/partner-logo/Aetna-140@2x.png 2x" alt="Aetna logo">
+					<source srcset="img/partner-logo/Aetna-140@2x.png" media="(min-width: 38em)">
+					<source srcset="img/partner-logo/Aetna-140@1x.png">
+					<img srcset="img/partner-logo/Aetna-140@1x.png" alt="Aetna logo">
 				</picture>
 			</div>
 		</div>
@@ -100,8 +105,9 @@
 				<h2 class="title-big">Support For People Of All Walks of Life</h2>
 				<p>Children as young as 2 years old may begin to develop behaviors which need extra support and attention.</p>
 				<picture>
-					<source srcset="img/Vector-Smart-Object@1x.png, img/Vector-Smart-Object@2x.png 2x" media="(min-width: 38em)">
-					<img srcset="img/Vector-Smart-Object@1x.png, img/Vector-Smart-Object@2x.png 2x" alt="Vector-Smart-Object">
+					<source srcset="img/support@2x.png" media="(min-width: 38em)">
+					<source srcset="img/support@1x.png">
+					<img src="img/support@1x.png" alt="support">
 				</picture>
 			</div>
 		</div>
@@ -112,10 +118,8 @@
 			<div class="content">
 				<h5 class="title">McGrew Behavior Services Helps...</h5>
 				<p>Families, organizations and health care providers in Northern California. Our knowledge and experience provide the specialized support people need when overcoming behavioral challenges. </p>
-				<a href="https://www.google.com">
-					<button>
-						<span>Contact us</span>
-					</button>
+				<a href="https://www.google.com" class="button">
+					<span>Contact us</span>
 				</a>
 			</div>
 		</div>
@@ -126,14 +130,16 @@
 			 <div class="slick-slider">
 			    <div class="slide">
 					<picture>
-						<source srcset="img/Rectangle-8-copy-2@1x.jpg, img/Rectangle-8-copy-2@2x.jpg 2x" media="(min-width: 38em)">
-						<img srcset="img/Rectangle-8-copy-2@1x.jpg, img/Rectangle-8-copy-2@2x.jpg 2x" alt="slide alt">
+						<source srcset="img/slider1@2x.jpg" media="(min-width: 38em)">
+						<source srcset="img/slider1@1x.jpg">
+						<img src="img/slider1@1x.jpg" alt="slide alt">
 					</picture>
 			    </div>
 			    <div class="slide">
 					<picture>
-						<source srcset="img/Layer-3.jpg, img/Layer-3@2x.jpg 2x" media="(min-width: 38em)">
-						<img srcset="img/Layer-3.jpg, img/Layer-3@2x.jpg 2x" alt="slide alt">
+						<source srcset="img/slider2@2x.jpg" media="(min-width: 38em)">
+						<source srcset="img/slider2@1x.jpg">
+						<img src="img/slider2@1x.jpg" alt="slide alt">
 					</picture>
 			    </div>
 			  </div>
@@ -146,10 +152,8 @@
 			<i>Be a part of something bigger than yourself. Make a difference.</i>
 			<h2 class="title-big">Join Our <span>Team</span>.</h2>
 			<p>We are always looking for highly motivated individuals who aligned with our committment to making a difference in the lives of other people. Whether you’re a BCBA or interested in ABA work we are interested in talking to you!</p>
-			<a href="https://www.google.com">
-				<button>
-					<span>Find what’s available</span>
-				</button>
+			<a href="https://www.google.com" class="button">
+				<span>Find what’s available</span>
 			</a>
 		</div>
 	</section>
@@ -157,7 +161,7 @@
 	<footer id="footer">
 		<div class="container">
 			<div class="content">
-				<nav class="footer-menu" role="navigation">
+				<nav class="footer-menu">
 					<ul>
 						<li>
 							<a href="https://www.google.com">Home</a>
@@ -174,20 +178,24 @@
 					</ul>
 				</nav>
 				<div class="social">
-					<a href="https://www.google.com">
-						<img src="img/linkedin-in-brands.svg" alt="linkedin icon">
+					<a href="https://www.google.com" target="_blank">
+						<i class="icon" aria-hidden="true" data-icon="i"></i>
 					</a>
-					<a href="https://www.google.com">
-						<img src="img/skype-brands.svg" alt="skype icon">
+					<a href="https://www.google.com" target="_blank">
+						<i class="icon" aria-hidden="true" data-icon="o"></i>
 					</a>
-					<a href="https://www.google.com">
-						<img src="img/m@2x.png" alt="users icon">
+					<a href="https://www.google.com" target="_blank">
+						<i class="icon" aria-hidden="true" data-icon="m"></i>
 					</a>
 				</div>
 				<div class="contact-info">
 					<p>120 Theresa Ave, American Canyon, CA 94503</p>
-					<a class="phone" href="tel:7075610134">707.561.0134 </a>
-					<a class="email" href="mailto:familyresources@mbisinc.com">familyresources@mbisinc.com</a>
+					<div class="contact-info-link">
+						<a class="phone" href="tel:7075610134">707.561.0134 </a>
+					</div>
+					<div class="contact-info-link">
+						<a class="email" href="mailto:familyresources@mbisinc.com">familyresources@mbisinc.com</a>
+					</div>
 				</div>
 			</div>
 			<div class="holder">
@@ -198,7 +206,7 @@
 
 <!-- Scripts -->
 	<script src="js/jQuery.min.js"></script>
-	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="js/slick.min.js"></script>
 	<script src="js/main.js"></script>
 <!-- Scripts / -->
 </body>
